[package]
name = "toa-ping"
version = "0.0.2"
authors = ["Douman <douman@gmx.se>"]
description = """Utility to perform pings.

Supported protocols:
* TCP
"""

homepage = "https://github.com/DoumanAsh/toa-ping"
repository = "https://github.com/DoumanAsh/toa-ping"

readme = "README.md"
keywords = ["ping"]
license = "MIT"

[dependencies]
lazy-socket = "^0.1"
lazy_static = "^0.2"

[target."cfg(unix)".dependencies]
libc = "^0.2.20"

[profile.release]
lto = true
