[package]
name = "toa-ping"
version = "0.1.0"
authors = ["Douman <douman@gmx.se>"]
categories = ["command-line-utilities"]
description = """Utility to perform pings.\n
\n
Supported protocols:\n
* TCP\n
"""

homepage = "https://github.com/DoumanAsh/toa-ping"
repository = "https://github.com/DoumanAsh/toa-ping"

readme = "README.md"
keywords = ["ping"]
license = "MIT"

[dependencies]
lazy-socket = "^0.1"
lazy_static = "^0.2"

[target."cfg(unix)".dependencies]
libc = "^0.2.20"

[profile.release]
lto = true
