[package]
name = "toa-ping"
version = "0.1.1"
authors = ["Douman <douman@gmx.se>"]
categories = ["command-line-utilities"]
description = """Utility to perform pings."""

homepage = "https://github.com/DoumanAsh/toa-ping"
repository = "https://github.com/DoumanAsh/toa-ping"

readme = "README.md"
keywords = ["ping"]
license = "MIT"

[dependencies]
lazy_static = "^0.2"
socket2 = "0.2.3"

[target."cfg(unix)".dependencies]
libc = "^0.2.20"

[profile.release]
lto = true
